Spacing issue

--- a/css/ahnaf.css
+++ b/css/ahnaf.css
@@ -45,7 +45,7 @@
         background-color: rgba(100, 100, 100, 0.9);
     }
     .main-button-push {
-        margin-top: 39vw;
+        margin-top: 35vw;
     }
 
     .transition-all {
